--- a/_posts/weeknotes/2018-10-5-weeknote-4.md
+++ b/_posts/weeknotes/2018-10-5-weeknote-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  I'm back
+title:  Work, School, Reality 
 author: "Weiwei Hsu"
 drink: sparkling water
 categories: weeknotes
@@ -8,4 +8,16 @@ categories: weeknotes
 
 This week feels like a week of production work. I spent much less time thinking and a lot more time executing. It feels nice to balance the week with some making, and shipping. It also feels nice to see a project coming together.
 
-In a design school, many students (including me) talk about the want to start our own (design-related) thing. Earlier in the week, I was asked if that desire comes from wanting to extend what I felt and experienced in school, because you then become a small consulting firm. Whereas, if the desire comes from wanting to build a business that can scale, then the work/commitment required is different. 
+In a design school, many students (including me) talk about the want to start our own (design-related) thing. Earlier in the week, I was asked if that desire comes from wanting to extend what I felt and experienced in school, because you then become a small consulting firm. Whereas, if the desire comes from wanting to build a business that can scale, then the work/commitment required is different.
+
+--
+
+Many people talk about world views. I wonder if there's such thing as world heights. Do we think and operate at different world heights, due to what we've been exposed to? How are world heights different from world views?
+
+--
+
+Earlier this week, I gave a tour at the &lab to a group of foreigners. Toward the end of the tour, they mentioned that they rarely interfaced with women when they were in SF, visiting different kinds of organizations. I genuinely wish that won't be case in the near future. Now that I have worked at a few different environments (each for a relatively short period of time), I see how problematic this is, and observe how often I feel defeated as someone who has a "softer" voice.
+
+--
+
+Since graduation, I've been building physical things, and it requires significantly more work. Yet, it feels so much more satisfying to make real objects. While a good group of people are advocating for virtual and augmented reality, I wonder what it takes for the reality to revenge. In my head, I sometimes compare the world of Harry Potter to the world of Ready Player One, and the former just feels more magical to me.
