weeknotes title update

--- a/_posts/weeknotes/2018-10-14-weeknote-5.md
+++ b/_posts/weeknotes/2018-10-14-weeknote-5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Make
+title:  Indie Makers, Starting Small
 author: "Weiwei Hsu"
 drink: coconut water
 categories: weeknotes
@@ -16,4 +16,4 @@ After listening to the stories behind serveral indie makers (sadly all male so f
 
 In the spirit of starting small, and to begin exploring physical products, I will make an analog newsletter. I find it so hard to spend time on email newsletters that I want to care, and I always spend more time reading (small) physical things.
 
-I've been wanting to do an interview series where we present technologists in a humane way. I find it unhelpful to portray technologists as people with superpower, because in reality, they are all humans. While I keep on coming back to this interview series, I'm beginning to think that it'd be more helpful to build a community/platform around this. 
+I've been wanting to do an interview series where we present technologists in a more humane way. I find it unhelpful to portray technologists as people with superpower, because in reality, they are all humans. While I keep on coming back to this interview series, I'm beginning to think that it'd be more helpful to build a community/platform around this.
