--- a/_posts/weeknotes/2018-09-15-weeknote-1.md
+++ b/_posts/weeknotes/2018-09-15-weeknote-1.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Four years, post-college, freelancing, collective"
+title:  "Four years, post-college, freelancing, collective | #1 "
 author: Weiwei Hsu
 drink: tea
 categories: weeknotes
