--- a/_posts/weeknotes/2018-09-21-weeknote-2.md
+++ b/_posts/weeknotes/2018-09-21-weeknote-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Architecture, Cedric Price
+title:  "Architecture, Cedric Price | #2"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
