--- a/_posts/weeknotes/2018-10-14-weeknote-5.md
+++ b/_posts/weeknotes/2018-10-14-weeknote-5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Indie Makers, Starting Small
+title:  "Indie Makers, Starting Small | #5"
 author: "Weiwei Hsu"
 drink: coconut water
 categories: weeknotes
