--- a/_posts/weeknotes/2018-10-5-weeknote-4.md
+++ b/_posts/weeknotes/2018-10-5-weeknote-4.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  Work, School, Reality 
+title:  "Work, School, Reality | #4"
 author: "Weiwei Hsu"
 drink: sparkling water
 categories: weeknotes
