--- a/_posts/weeknotes/2018-10-14-weeknote-5.md
+++ b/_posts/weeknotes/2018-10-14-weeknote-5.md
@@ -14,6 +14,6 @@ After listening to the stories behind serveral indie makers (sadly all male so f
 - If there's a pattern across all indie makers, it is that they are all _prolific_
 - It is more helpful to aim small, such as acquiring just 100 paying customers
 
-In the spirit of starting small, and to begin exploring physical products, I will make an analog newsletter. I find it so hard to spend time on email newsletters that I want to care, and I always spend more time reading (small) physical things.
+In the spirit of starting small, and to begin exploring physical products, I will make an analog newsletter, tentatively called &Infrastructorial. I find it so hard to spend time on email newsletters that I want to care, and I always spend more time reading (small) physical things.
 
-I've been wanting to do an interview series where we present technologists in a more humane way. I find it unhelpful to portray technologists as people with superpower, because in reality, they are all humans. While I keep on coming back to this interview series, I'm beginning to think that it'd be more helpful to build a community/platform around this.
+I've been wanting to do an interview series where we present technologists in a more humane way. I find it unhelpful to portray technologists as people with superpower, because in reality, they are all humans. While I keep on coming back to this interview series, I'm beginning to think that it'd be more helpful to build a community/platform around this. Perhaps it will be centered around &half-baked thoughts. Quite a lot of people I know want to write weekly notes publicly, but hasn't been consistent with it. I wonder if we can incentivize people to write week notes collectively.
