--- a/_posts/weeknotes/2018-10-14-weeknote-5.md
+++ b/_posts/weeknotes/2018-10-14-weeknote-5.md
@@ -6,14 +6,27 @@ drink: coconut water
 categories: weeknotes
 ---
 
-Recently, my commute time has increased slightly and coincidently, I've stumbled upon several more podcasts that I enjoy. In particular, I've spent quite a lot of time reading/listening (ironically not so much making yet) about indie makers and digital nomads. The discovery of this type of lifestyle / source of income has again validated the benefits of being fluent in code. At the same time, I also wonder if and when there will be a group of _indie_ makers who will focus on physical products. While the internet is great and accessible (kind of), it feels like too many people's working on the internet. I wonder what it would take to incentivize people to invest their talent into other sectors.
+Recently, my commute time has increased slightly and coincidently, I've stumbled upon several more podcasts to enjoy. In particular, I've spent quite a lot of time reading/listening (ironically not so much making yet) about indie makers and digital nomads. The discovery of this type of lifestyle / source of income has again validated the benefits of being fluent in code. At the same time, it seems that there are an increasing amount of small funds/platforms built to support indie makers. I wonder if and when there will be a group of indie makers who will focus on _physical products_. While the internet is great and accessible (kind of), it feels like too many people's working on the internet. I wonder what it would take to incentivize people to invest their talent into other sectors.
 After listening to the stories behind serveral indie makers (sadly all male so far), I've learned that:
 - All mailing lists start with having 1 subscriber
 - All products start with having 1 (paying) customer
 - The first thing you make almost never take off
 - If there's a pattern across all indie makers, it is that they are all _prolific_
 - It is more helpful to aim small, such as acquiring just 100 paying customers
+- Always charge more than what you think you should be charging
 
 In the spirit of starting small, and to begin exploring physical products, I will make an analog newsletter, tentatively called &Infrastructorial. I find it so hard to spend time on email newsletters that I want to care, and I always spend more time reading (small) physical things.
 
-I've been wanting to do an interview series where we present technologists in a more humane way. I find it unhelpful to portray technologists as people with superpower, because in reality, they are all humans. While I keep on coming back to this interview series, I'm beginning to think that it'd be more helpful to build a community/platform around this. Perhaps it will be centered around &half-baked thoughts. Quite a lot of people I know want to write weekly notes publicly, but hasn't been consistent with it. I wonder if we can incentivize people to write week notes collectively.
+I've been wanting to do an interview series where we present technologists in a more humane way. I find it unhelpful to portray technologists as people with superpower, because in reality, they are all humans. While I keep on coming back to this interview series, I'm beginning to think that it'd be more helpful to build a community/platform around this. Perhaps it will be centered around &halfbaked thoughts. Quite a lot of people I know want to write weekly notes publicly, but hasn't been consistent with it. I wonder if we can incentivize people to write week notes collectively.
+
+,
+
+Wrote a one-sentence description about &halfbaked: Half baked surfaces things that keep people up at night. It is a weekly mailing list where any curious human can share scribbles of what they are thinking. Will set up newsletter this week and see if there's any interest. If anything, I like how approachable the notion of [half baked] is.
+
+Yesterday, I attended the Whole Earth Catalog 50th Anniversary, it has been a while since I've sat down for more than an hour and just listen to somebody else to speak (in the same room). I love this one slide Stewart Brand had: having access to tools and skills confers agency. The idea that a thinking space can confer agency is something that I should be thinking about more. 
+
+![Whole Earth Catalog 50th Anniversary]({{site.baseurl}}/assets/images/agency.jpg)
+
+The exhibition was very nice as well. I didn't how prolific the group was, until seeing all of the publications laid out on both sides of a very long hallway.
+
+![Whole Earth Catalog 50th Anniversary]({{site.baseurl}}/assets/images/50th.jpg)
