--- a/_posts/weeknotes/2018-11-4-weeknote-8.md
+++ b/_posts/weeknotes/2018-11-4-weeknote-8.md
@@ -16,4 +16,10 @@ Probably because of the podcasts I'm listening to, I've been thinking a lot abou
 
 --
 
-I continue to discover interesting businesses/products/regulations when speaking with friends who are currently living in China. It has also been interesting to see how people to react to these news when sharing them on social media. I wonder if there's a demand for a channel dedicated to this. 
+I continue to discover interesting businesses/products/regulations when speaking with friends who are currently living in China. It has also been interesting to see how people to react to these news when sharing them on social media. I wonder if there would be an interest in a channel dedicated to this, perhaps a newsletter?
+
+--
+
+Working without a boss is something that very few people on this planet has experience with. In most situations, we have a teacher, a boss, a senior of some sort, who would present a clear goal that we need to deliver on. By working on side projects, especially since being out-of-school, is my way to develop a better sense of setting goals and deadlines. I've always found myself working procrastinating when I can, and my current way of going around that, is to set up some sort of social obligations to make sure I will meet those 'psuedo' deadlines. I wonder how other people make sure they work on projects that don't have deadlines.
+
+I have a feeling that I really need to concentrate for the next few months (like when making thesis and Secret Project). I need to get much more fluent with coding and discussing/designing physical products and deliver on a few more projects.
