--- a/_posts/weeknotes/2018-11-4-weeknote-8.md
+++ b/_posts/weeknotes/2018-11-4-weeknote-8.md
@@ -6,7 +6,7 @@ drink: water
 categories: weeknotes
 ---
 
-This week, I've finally abandoned Apple Podcasts and switched to Breaker Podcasts. I'v had the Breaker app for a few months now but was never compelled to actually start using it. It wasn't until a podcast I was listening to had half of their season missing on Apple Podcasts, that I decided to switch to Breaker, which had everything. And I will probably never look back. Out of everything, I love the fact that you can adjust playing speed and make it specific to each podcast. It's also helpful to see how many podcasts I've listened to; I've never gotten a sense on how many podcasts I've completed.
+This week, I've finally abandoned Apple Podcasts and switched to Breaker Podcasts. I'v had the Breaker app for a few months now but was never compelled to actually start using it. It wasn't until a podcast I was listening to had half of their season missing on Apple Podcasts, that I decided to switch to Breaker, and I will probably never look back. Different from the Apple Podcasts, I love the fact that you can adjust playing speed and make it specific to each podcast. It's also helpful to see how many podcasts I've listened to; I've never gotten a sense on how many podcasts I've completed.
 
 When speaking to a consultancy earlier in the week, I've realized what I'm truly interested in: In senior year, I became borderline obssessed with long-term technology research, and spoke with roughly 30 technology researchers. At the same time, I'm always interested in poetic products and putting things in the world. So what does it look like if I merge the two? My current conclusion is that, I want to apply long-term thinking to the creation of poetic and meaningful products.
 
@@ -22,4 +22,4 @@ I continue to discover interesting businesses/products/regulations when speaking
 
 Working without a boss is something that very few people on this planet has experience with. In most situations, we have a teacher, a boss, a senior of some sort, who would present a clear goal that we need to deliver on. By working on side projects, especially since being out-of-school, is my way to develop a better sense of setting goals and deadlines. I've always found myself working procrastinating when I can, and my current way of going around that, is to set up some sort of social obligations to make sure I will meet those 'psuedo' deadlines. I wonder how other people make sure they work on projects that don't have deadlines.
 
-I have a feeling that I really need to concentrate for the next few months (like when making thesis and Secret Project). I need to get much more fluent with coding and discussing/designing physical products and deliver on a few more projects.
+I have a feeling that I really need to concentrate for the next few months (like when making thesis and Secret Project). I need to become much more fluent with coding and discussing/designing physical products and deliver on a few more projects.
