weeknotes title updated

--- a/_posts/weeknotes/2018-11-10-weeknote-9.md
+++ b/_posts/weeknotes/2018-11-10-weeknote-9.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Creative freedom, micromobility | #9"
+title:  "Creative freedom, School, Micromobility | #9"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
