--- a/_posts/weeknotes/2018-11-10-weeknote-9.md
+++ b/_posts/weeknotes/2018-11-10-weeknote-9.md
@@ -11,7 +11,7 @@ I'm very excited to see where all of these movements lead to, and genuinely hope
 
 --
 
-Some of the Secret Project Taiwan members are in SF this fall as exchange stduents. Meeting with them has reminded me of the sptw sessions that I ran in the summer of 2015 and 2016. To a very large extenet, that's still the project that I'm the most proud of, and would like to continue working on that at some point.
+Some of the Secret Project Taiwan members are in SF this fall as exchange stduents. Meeting with them has reminded me of the sptw sessions that I ran in the summer of 2015 and 2016. To a very large extent, that's still the project that I'm the most proud of, and would like to continue working on that at some point.
 
 The question I've been thinking about this week, in relation to creative freedom, is whether there should be a school that helps you to gain creative freedom. Job security is no longer the only goal people have for their careers. However, it is still very hard for people to wrap their head around, and be brave enough to get started with gaining creative freedom (especially those who live in an environment that culturally encourages to climb the corporate ladder, or stick with a 'safe job'.)
 
