--- a/_posts/weeknotes/2018-11-25-weeknote-11.md
+++ b/_posts/weeknotes/2018-11-25-weeknote-11.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "  | #11"
+title:  " Conversations, Income Sharing Agreements | #11"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
@@ -21,4 +21,4 @@ Someone told me to cease doubting myself and just jump and do it.
 --
 🎓
 
-Been listening to a few podcasts about income sharing agreements. I'm suprised to learn that Yale University was the first university to experiment with it, about 10 years ago, and failed miserably. It's interesting how there has been an increase in startups that are using this model. Perhaps at some point, this will pressure colleges of different to experiment with it. 
+Been listening to a few podcasts about income sharing agreements. I'm suprised to learn that Yale University was the first university to experiment with it, about 10 years ago, and failed miserably. It's interesting how there has been an increase in startups that are using this model. Perhaps at some point, this will pressure colleges of different to experiment with it.
