--- a/_posts/weeknotes/2019-1-13-weeknotes-17.md
+++ b/_posts/weeknotes/2019-1-13-weeknotes-17.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Book, Communication | #17"
+title:  "Break, Home, Back | #17"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
