new article coming

--- a/_posts/weeknotes/2018-12-30-weeknotes-15.md
+++ b/_posts/weeknotes/2018-12-30-weeknotes-15.md
@@ -11,7 +11,7 @@ I wanted to document everything I’ve done and have not done this year.
 The reason why I’ve decided to do this is because I’ve graduate from college, and life/what I’ve done is entirely up to me (although that is true to school too.) This will probably be the 10000th times you’ve seen someone doing this, but this will be the first time for me.
 
 + Got very sick in January because of over-working in the previous semester
-+ Got to invite my designer I respect the most to speak at CCA
++ Got to invite the designer I respect the most to speak at CCA
 + Got to meet someone I first met on Twitter in person
 + I promised myself to not slack off on thesis and I didn’t
 + Graduated from CCA with distinction
@@ -32,7 +32,8 @@ The reason why I’ve decided to do this is because I’ve graduate from college
 + Visited a Chinese Tech company
 + Started reading books in Chinese again
 + Confronted the reality of fighting for creative and research freedom
++ Overall, I was very confused with what I want to do, how I could fit in in the design world, and if I should try and fit in
 
-—
+--
 It is now one hour away from 2019. Unlike some people, I don’t feel like 2018 is a year that I cannot top, but it also wasn’t a bad year. I feel like, one bad habit I got rid of this year was how lazy I get after thinking through how a project can play out (I used to think that if a project can happen, then I don’t really need to realize it..)
 One thing I aiming to get better at next year, is to execute a ton more.
