--- a/_posts/weeknotes/2019-1-27-weeknotes-18.md
+++ b/_posts/weeknotes/2019-1-27-weeknotes-18.md
@@ -1,7 +1,29 @@
 ---
 layout: post
-title:  " | #18"
+title:  "Collective creative freedom | #18"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
 ---
+
+In my weeknotes [#9](http://weiweihsu.com/2018-11-10/weeknote-9), I wrote about the idea creative freedom:
+
+> This idea of gaining creative freedom, or research freedom, is perhaps something that I find many different communities strive for (the new indie vc movement, digital nomads, patreon creators, kickstarter creators, indie hackers, to name a few.)
+
+> The question I've been thinking about this week, in relation to creative freedom, is whether there should be a school that helps you to gain creative freedom. Job security is no longer the only goal people have for their careers. However, it is still very hard for people to wrap their head around, and be brave enough to get started with gaining creative freedom (especially those who live in an environment that culturally encourages to climb the corporate ladder, or stick with a 'safe job'.)
+
+> I believe that Secret Project Taiwan was a step toward that direction, but currently I don't know how I could be taking it another step furthur.
+
+3 months later, I think I now have a better sense of how to begin to own creative freedom, collectively. Hopefully, I will have more to share soon.
+
+--
+
+Quite a lot of things happened this week..
+
+Ever since graduation, I have been thinking a lot about what I would like to work on, and how I can get there. A few months have gone by now, and I think I've realized that I need a balance between exploring and experimenting with tools creation, but at the same time, making it available and accessible to others. At the same time, I've been searching for places where I can explore the intersection of computing and architecture/urbanism. I think I have found a group of people that does precisely these, and it feels like discovering earthlings when you think you are the only one residing on Mars..
+
+I also got a publication date for the first paper that I've co-authored.
+
+I went to school to pick up my student excellence in leadership awards, and reading about why I was nominated and awarded with the awards feels like getting a flashback of everything that happened during college.
+
+Perhaps most importantly, I feel a lot clearer about what I want to do and how I can get there.
