--- a/_posts/weeknotes/2018-10-14-weeknote-5.md
+++ b/_posts/weeknotes/2018-10-14-weeknote-5.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Indie Makers, Starting Small | #5"
+title:  "Indie Makers, Starting small | #5"
 author: "Weiwei Hsu"
 drink: coconut water
 categories: weeknotes
@@ -23,7 +23,7 @@ I've been wanting to do an interview series where we present technologists in a 
 
 Wrote a one-sentence description about &halfbaked: Half baked surfaces things that keep people up at night. It is a weekly mailing list where any curious human can share scribbles of what they are thinking. Will set up newsletter this week and see if there's any interest. If anything, I like how approachable the notion of [half baked] is.
 
-Yesterday, I attended the Whole Earth Catalog 50th Anniversary, it has been a while since I've sat down for more than an hour and just listen to somebody else to speak (in the same room). I love this one slide Stewart Brand had: having access to tools and skills confers agency. The idea that a thinking space can confer agency is something that I should be thinking about more. 
+Yesterday, I attended the Whole Earth Catalog 50th Anniversary, it has been a while since I've sat down for more than an hour and just listen to somebody else to speak (in the same room). I love this one slide Stewart Brand had: having access to tools and skills confers agency. The idea that a thinking space can confer agency is something that I should be thinking about more.
 
 ![Whole Earth Catalog 50th Anniversary]({{site.baseurl}}/assets/images/agency.jpg)
 
