--- a/_posts/weeknotes/2018-12-16-weeknotes-13.md
+++ b/_posts/weeknotes/2018-12-16-weeknotes-13.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Payment systems, Alternative Business Models| #13"
+title:  "Payment systems, Alternative business models| #13"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
