--- a/_posts/weeknotes/2018-11-25-weeknote-11.md
+++ b/_posts/weeknotes/2018-11-25-weeknote-11.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  " Conversations, Income Sharing Agreements | #11"
+title:  " Conversations, Income sharing agreements | #11"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
