--- a/_posts/weeknotes/2019-4-21-weeknotes-24.md
+++ b/_posts/weeknotes/2019-4-21-weeknotes-24.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  " | #24"
+title:  "Leverage, Weekend, Podcast | #24"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
