--- a/_posts/weeknotes/2019-4-21-weeknotes-24.md
+++ b/_posts/weeknotes/2019-4-21-weeknotes-24.md
@@ -8,7 +8,7 @@ categories: weeknotes
 
 Haven't had a relatively calming weekend in a few months. It's nice to just relax and read books and play games 😅
 
-Recently wrapped up a housing releated project with a few friends. Feels nice to have delivered something different. The exhibition we installed looks like a render because we painted everything in the same color. In retrospect, it doesn't feel li kthe presentation was as important, because the event was much more focused on which teams are winnign the award this year.
+Recently wrapped up a housing releated project with a few friends. Feels nice to have delivered something different. The exhibition we installed looks like a render because we painted everything in the same color. In retrospect, it doesn't feel like the presentation was as important, because the event was much more focused on which teams are winning the award this year.
 
 ![housing project's installation]({{site.baseurl}}/assets/images/house9.jpeg)
 
@@ -18,8 +18,8 @@ A realization I had recently: I should be working on things that I can personall
 
 --
 
-While commuting, I listened to a podcast where Tim Ferris interviewed Eric Schmidt. Part of the interview was spent discussing about a new book called "A Trillion Dollar Coach". I've never really thought about the difference between a coach and a mentor in a business context. I really like the idea that as an organization, the goal is to succeed as a team, not to have one person who performs well independently.
+While commuting, I listened to a podcast where Tim Ferris interviewed Eric Schmidt. Part of the interview was spent discussing about a new book called "A Trillion Dollar Coach". I've never really thought about the differences between a coach and a mentor in a business context. I really like the idea that as an organization, the goal is to succeed as a team, not to have one person who performs well independently.
 
 --
 
-Started reading about the difference between doing a listening session vs an interview. Feels like there's significant difference between the two, though they may sound similar to most people.
+Started reading about the differences between doing a listening session vs an interview. Feels like there're significant differences between the two, though they may sound similar to most people.
