new weeknote and images

--- a/_posts/weeknotes/2019-5-12-weeknotes-25.md
+++ b/_posts/weeknotes/2019-5-12-weeknotes-25.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Plants, College, SFMoMA, and Presentations | #25"
+title:  "Plants, College, SFMoMA, Presentations | #25"
 author: "Weiwei Hsu"
 drink: chia seed water
 categories: weeknotes
