--- a/_posts/weeknotes/2019-6-17-weeknotes-27.md
+++ b/_posts/weeknotes/2019-6-17-weeknotes-27.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  " | #27"
+title:  "New words, Milk tea, Hiking | #27"
 author: "Weiwei Hsu"
 drink: smoothie
 categories: weeknotes
@@ -8,7 +8,7 @@ categories: weeknotes
 
 When I first set up this website for writing weeknotes, I thought I could jot down notes while linking different thoughts with different hashtags. In retrospect that's not really possible, because half baked thoughts are just really loose. However, what I've noticed is that, by writing more frequently, I'm able to think more clearly in terms of when I started thinking about a new thought.
 
-I've been thinking about how to come up with new terms. New phrases are often needed to describe a new combination of activity or thinking, but it's hard to understand what will stick. Metaphors or mashing two words together often work well. Some friends and I tried to brainstorm around something that we are working on, and it's really hard to come up with a new name! 
+I've been thinking about how to come up with new terms. New phrases are often needed to describe a new combination of activity or thinking, but it's hard to understand what will stick. Metaphors or mashing two words together often work well. Some friends and I tried to brainstorm around something that we are working on, and it's really hard to come up with a new name!
 
 --
 
