changed title back

--- a/_posts/weeknotes/2019-8-18-weeknotes-31.md
+++ b/_posts/weeknotes/2019-8-18-weeknotes-31.md
@@ -10,7 +10,7 @@ I really miss the old internet (I was born in the 90s so when I say the old inte
 
 --
 
-Started playing basketball and tennis lately, it's cheaper than rock climbing and I still get to move around with friends. Haha I suppose that's what it comes down to.
+Started playing basketball and tennis lately, it's cheaper than rock climbing😅 and I still get to move around with friends😍. Haha I suppose that's what it comes down to.
 ![an image of tennis court]({{site.baseurl}}/assets/images/sports.jpeg)
 
 --
