--- a/_posts/weeknotes/2019-9-15-weeknotes-33.md
+++ b/_posts/weeknotes/2019-9-15-weeknotes-33.md
@@ -8,7 +8,7 @@ categories: weeknotes
 
 Tiny Factories has officially started in September. It feels like there's some good energy around what we are building and aspiring toward. Let's keep that going!
 
-I'm really enjoying this path of taking things one step at a time. It feels good knowing that with each project I'm learning something new, and overtime these learnings will compound.
+I'm really enjoying this path of taking things one step at a time. It feels good knowing that with each project I'm learning something new, and overtime these learnings will compound.s
 
 In retrospect, I'm really grateful for the projects and classes I worked on and took. Those learnings are really informing what I'm doing now. (For example, leaving time for teammates to get to know each other, because the goal is to go far, not go fast.)
 
@@ -19,6 +19,6 @@ I'm realizing that I really want to spend more time in nature, or at least, more
 
 ![view of UCSD]({{site.baseurl}}/assets/images/nature_school.jpeg)
 
-I'm going to miss this city. 
+I'm going to miss this city.
 
 ![Walking around fort mason in san francisco]({{site.baseurl}}/assets/images/fort_mason.png)
