added title to the weeknote

--- a/_posts/weeknotes/2019-10-6-weeknotes-34.md
+++ b/_posts/weeknotes/2019-10-6-weeknotes-34.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  " | #34"
+title:  "Happy, Twitter, Tahoe | #34"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
