--- a/_posts/weeknotes/2019-10-20-weeknotes-35.md
+++ b/_posts/weeknotes/2019-10-20-weeknotes-35.md
@@ -1,16 +1,14 @@
 ---
 layout: post
-title:  "Hundred Rabbits, Ideal Life Style, | #35"
+title:  "Hundred Rabbits, Ideal Life Style | #35"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
 ---
 
-Several of my friends follow Hundred Rabbits: they (two people) have been sailing and creating software, recipe, games, illustrations on their off-the-grid studio (boat). Their journey is funded by supporters on patreon and they gave a talk at XOXO on how they changed their lifestyle to adapt to living on a boat.
+Several of my friends follow Hundred Rabbits: they (two people) have been sailing and creating software, recipe, games, illustrations on their off-the-grid studio (boat). They are funded by supporters on patreon and they gave a talk at XOXO on how they changed their lifestyle to adapt to living on a boat.
 
-https://www.youtube.com/watch?v=BW32yUEymvU&feature=youtu.be
-
-It wasn't until watching this talk that I actually got to learn more about them. (I know, I could have put into more effort in reading and watching the content they've put out.)
+It wasn't until watching this [talk](https://www.youtube.com/watch?v=BW32yUEymvU&feature=youtu.be) that I actually got to learn more about them. (I know, I could have put into more effort in reading and watching the content they've put out.)
 
 There are a lot of things that we take for granted by living in cities, things i didn't really think about until watching this talk:
 + they can't use adobe products offline because their software need to connect to internet to check your subscription
@@ -34,14 +32,18 @@ I think there's a future where just enough technology is what we desire, but to 
 
 Jonathan Blow also writes, rants, and talks about [this](https://mobile.twitter.com/Jonathan_Blow/status/1184976190559244289)
 
+
 --
+
 Went to my first NBA game this month! It's a brand new stadium and it was so interesting to see how the stadium was designed and how different activities were fit into time-out sessions.
 ![nba game in san francisco]({{site.baseurl}}/assets/images/nba.jpeg)
 
 --
+
 Growing up, my mom would put out some halloween decorations in the house, but I've never seen halloween decorations like this!
 ![halloween decoration]({{site.baseurl}}/assets/images/halloween.png)
 
 --
+
 Walked into a Cabela's (a store that has hunting and camping equipments) for the first time. On one side of the shelve there are unicorn plush toys, on the other shelve there are real guns.
 ![Cabela's shelve]({{site.baseurl}}/assets/images/cabela's.jpeg)
