--- a/_posts/weeknotes/2020-01-15-weeknotes-39.md
+++ b/_posts/weeknotes/2020-01-15-weeknotes-39.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Back, Decade in review| #39"
+title:  "Back | #39"
 author: "Weiwei Hsu"
 drink: water
 categories: weeknotes
