fixed collection and new weeknote

--- a/_posts/weeknotes/2020-02-7-weeknotes-40.md
+++ b/_posts/weeknotes/2020-02-7-weeknotes-40.md
@@ -12,4 +12,4 @@ I will try to write a longer update when I'm at the airport.
 
 Meanwhile, please enjoy this photo of the view when I skiied for the first time.
 
-![tahoe in winter]({{site.baseurl}}/assets/images/winter_tahoe.jpg.jpeg)
+![tahoe in winter]({{site.baseurl}}/assets/images/winter_tahoe.jpg)
