--- a/_posts/comic/2020-09-21-juju.md
+++ b/_posts/comic/2020-09-21-juju.md
@@ -13,14 +13,14 @@ categories: comic
 <meta property="og:url" content="http://weiweihsu.com/2020-07-26/wheres-home">
 <meta property="og:title" content="Juju">
 <meta property="og:description" content="<3">
-<meta property="og:image" content="/assets/comic/roundup_august_tag.jpg">
+<meta property="og:image" content="/assets/comic/jujutag.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="http://weiweihsu.com/2020-07-26/wheres-home">
 <meta property="twitter:title" content="Juju">
 <meta property="twitter:description" content="<3">
-<meta property="twitter:image" content="/assets/comic/roundup_august_tag.jpg">
+<meta property="twitter:image" content="/assets/comic/jujutag.jpg">
 
 
 <p style= "text-align: right;">It's been a while</p>
